--- a/index4.html
+++ b/index4.html
@@ -5,198 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Таблица Шульте</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f4f4f9;
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            color: #333;
-            padding: 10px;
-        }
-
-        h3 {
-            font-size: 28px;
-            margin-top: 20px;
-            color: #1E90FF;
-        }
-
-        /* Кнопка-крестик */
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            width: 35px;
-            height: 35px;
-            background-color: #ffffff;
-            color: #1E90FF;
-            font-size: 18px;
-            font-weight: bold;
-            text-align: center;
-            line-height: 35px;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .close-btn:hover {
-            background-color: #ddd;
-        }
-
-        #timer {
-            font-size: 24px;
-            margin-bottom: 15px;
-            color: #32CD32;
-        }
-
-        .menu {
-            margin: 20px 0;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-            justify-content: center;
-        }
-
-        .menu button {
-            padding: 12px 20px;
-            font-size: 16px;
-            border: none;
-            background-color: #1E90FF;
-            color: white;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            min-width: 80px;
-        }
-
-        .menu button:hover {
-            background-color: #187bcd;
-        }
-
-        .grid-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-            width: 100%;
-            height: 100%;
-            max-width: 350px;
-            max-height: 350px;
-            position: relative;
-        }
-
-        .grid {
-            display: grid;
-            gap: 5px;
-            position: relative;
-            justify-items: center;
-            width: 100%;
-            height: 100%;
-        }
-
-        .cell {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 22px;
-            font-weight: bold;
-            border-radius: 10px;
-            cursor: pointer;
-            user-select: none;
-            background-color: #87CEEB;
-            transition: transform 0.2s;
-            width: 100%;
-            height: 100%;
-        }
-
-        .cell:hover {
-            transform: scale(1.1);
-        }
-
-        .center-dot {
-            width: 12px;
-            height: 12px;
-            background-color: red;
-            border-radius: 50%;
-            position: absolute;
-            transform: translate(-50%, -50%);
-            display: none;
-        }
-
-        #result {
-            font-size: 18px;
-            margin-top: 15px;
-            color: #333;
-            text-align: center;
-        }
-
-        #start-btn {
-            margin-top: 20px;
-            padding: 14px 35px;
-            font-size: 20px;
-            background-color: #32CD32;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #start-btn:hover {
-            background-color: #228B22;
-        }
-
-        /* Адаптивность для мобильных устройств */
-        @media (max-width: 600px) {
-            h3 {
-                font-size: 24px;
-            }
-
-            #timer {
-                font-size: 20px;
-            }
-
-            .menu button {
-                padding: 10px 15px;
-                font-size: 14px;
-            }
-
-            .cell {
-                font-size: 18px;
-                width: 20vw;
-                height: 20vw;
-            }
-
-            #result {
-                font-size: 16px;
-            }
-
-            .grid-container {
-                max-width: 100%;
-                max-height: 300px;
-            }
-
-            .menu {
-                flex-direction: column;
-            }
-        }
-
-        @media (max-width: 400px) {
-            .grid-container {
-                max-width: 100%;
-                max-height: 250px;
-            }
-
-            .menu button {
-                min-width: 70px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style4.css">
 </head>
 
 <body>
@@ -221,99 +30,7 @@
 
     <button id="start-btn" onclick="startGame()" style="display:none;">Начать</button>
 
-    <script>
-        const colors = ["#87CEEB", "#FFD700", "#8A2BE2", "#1E90FF"];
-        let currentNumber = 1;
-        let timerInterval;
-        let elapsedMilliseconds = 0;
-        let totalCells;
-        let selectedGridSize;
-        let gameStarted = false;
-
-        function selectGridSize(size) {
-            selectedGridSize = size;
-            document.getElementById("start-btn").style.display = "inline-block";
-            generateGrid(size);
-        }
-
-        function startGame() {
-            gameStarted = true;
-            document.getElementById("start-btn").style.display = "none";
-            document.getElementById("result").textContent = "";
-            startTimer();
-        }
-
-        function startTimer() {
-            timerInterval = setInterval(() => {
-                elapsedMilliseconds++;
-                const seconds = Math.floor(elapsedMilliseconds / 100);
-                const milliseconds = String(elapsedMilliseconds % 100).padStart(2, '0');
-                document.getElementById("timer").textContent = `${seconds}:${milliseconds}`;
-            }, 10);
-        }
-
-        function endGame() {
-            clearInterval(timerInterval);
-            const seconds = Math.floor(elapsedMilliseconds / 100);
-            const milliseconds = String(elapsedMilliseconds % 100).padStart(2, '0');
-            document.getElementById("result").textContent = `Игра завершена! Время: ${seconds}:${milliseconds}`;
-        }
-
-        function generateGrid(size) {
-            currentNumber = 1;
-            elapsedMilliseconds = 0;
-            clearInterval(timerInterval);
-            document.getElementById("timer").textContent = "00:00";
-
-            const grid = document.getElementById("grid");
-            grid.innerHTML = "";
-            grid.style.gridTemplateColumns = `repeat(${size}, 1fr)`;
-            grid.style.gridTemplateRows = `repeat(${size}, 1fr)`;
-
-            const numbers = Array.from({ length: size * size }, (_, i) => i + 1).sort(() => Math.random() - 0.5);
-            const cells = [];
-            totalCells = size * size;
-
-            numbers.forEach((number, index) => {
-                const cell = document.createElement("div");
-                cell.classList.add("cell");
-                cell.textContent = number;
-                cell.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-                cell.addEventListener("click", () => {
-                    if (gameStarted && parseInt(cell.textContent) === currentNumber) {
-                        if (navigator.vibrate) {
-                            navigator.vibrate(200);
-                        }
-
-                        currentNumber++;
-                        if (currentNumber > totalCells) {
-                            endGame();
-                        }
-                    }
-                });
-                grid.appendChild(cell);
-                cells.push(cell);
-            });
-
-            if (size % 2 === 0) {
-                placeRedDot();
-            } else {
-                document.getElementById("center-dot").style.display = "none";
-            }
-        }
-
-        function placeRedDot() {
-            const container = document.querySelector('.grid-container');
-            const centerDot = document.getElementById('center-dot');
-            const containerRect = container.getBoundingClientRect();
-            const centerX = containerRect.width / 2;
-            const centerY = containerRect.height / 2;
-
-            centerDot.style.left = `${centerX}px`;
-            centerDot.style.top = `${centerY}px`;
-            centerDot.style.display = "block";
-        }
-    </script>
+    <script src="script4.js"></script>
 </body>
 
 </html>
