--- a/index4.html
+++ b/index4.html
@@ -23,7 +23,7 @@
 
     <div class="grid-container">
         <div class="grid" id="grid"></div>
-        <div class="center-dot" id="center-dot"></div>
+        <div class="center-dot" id="center-dot"></div> <!-- Точка будет здесь -->
     </div>
 
     <div id="result"></div>
